feat(field): improve validator on field number

--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -6,7 +6,8 @@
   "input": {
     "error": {
       "empty": "Le champ est requis",
-      "wrong_data": "Le champ comporte une erreur"
+      "wrong_data": "Le champ comporte une erreur",
+      "wrong_percentage": "Le pourcentage ne peut pas être supérieur à 100"
     }
   },
   "start_amount": "Montant investi"
