--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -59,7 +59,10 @@
     "export": "Export",
     "restore": "Restore",
     "successfully_restored": "The database has been successfully restored",
-    "failed_to_restore": "Database restore failed"
+    "failed_to_restore": "Database restore failed",
+    "rate_of_return": "Rate of return",
+    "annual_performance": "Annual performance",
+    "per_year": "{}% per year"
   },
   "button": {
     "close": "Close",
