--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -44,6 +44,7 @@
     "crypto_amount": "Crypto amount",
     "old_value": "Old value",
     "total_interest": "Total interest",
+    "interests": "Interests",
     "receive_at": "Receive at",
     "sold_on": "Sold on",
     "bought_on": "Bought on {}",
@@ -63,7 +64,9 @@
     "rate_of_return": "Rate of return",
     "annual_performance": "Annual performance",
     "per_year": "{}% per year",
-    "api_error": "API error"
+    "api_error": "API error",
+    "replace_value": "Replace value",
+    "new_total": "New total"
   },
   "button": {
     "close": "Close",
@@ -89,10 +92,12 @@
     "crowdfunding": "Real estate crowdfunding",
     "cryptocurrency": "Cryptocurrency",
     "cs_knives": "CS knives",
+    "life_insurance": "Life insurance",
     "pea": "PEA",
     "cash": "Cash",
     "reit": "Reit"
   },
+  "life_insurance": {},
   "filters": {
     "sort_by_start_amount_desc": "Initial amount (descending)",
     "sort_by_start_amount_asc": "Initial amount (Ascending)"
