feat(per): add PER savings type with form and screen and test

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -94,6 +94,7 @@
     "cs_knives": "CS knives",
     "life_insurance": "Life insurance",
     "pea": "PEA",
+    "per": "PER",
     "cash": "Cash",
     "reit": "Reit"
   },
