--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -94,6 +94,7 @@
     "cs_knives": "Couteaux CS",
     "life_insurance": "Assurance vie",
     "pea": "PEA",
+    "per": "PER",
     "cash": "Liquide",
     "reit": "SCPI"
   },
