refactor(i18n): replace static context.tr('xxx.yyy') with context.tr(LocaleKeys.xxx_yyy)

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -75,7 +75,8 @@
     "payback_years": "{} years",
     "payback_recovered": "Recovered",
     "gross": "Gross",
-    "net": "Net"
+    "net": "Net",
+    "oh_no": "Oh no!"
   },
   "button": {
     "close": "Close",
